<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snapchat</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout_label">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="sign_up_label">Don\'t have an account? Sign Up!</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you enter a username, a password and an email address</string>
    <string name="error_title">Ooops!</string>
    <string name="login_error_message">Please make sure you enter a username, a password</string>
    <string name="empty_inbox_label">No new Messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_settings">Settings</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_limit">The selected video must be less than 10 mb</string>
    <string name="error_open_file">There was a problem with selecting file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose Some Friends From The List</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected, Please select a different file</string>
    <string name="success_message">Messages sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>
    <string name="title_activity_view_image">Snapchat Clone</string>
    <string name="content_description_background">Snapchat Clone Background Image</string>
    <string name="subtitle">Self Destructing Message</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_description_button_divider">Button Divider</string>
</resources>
