<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.example.joker.snapchatclone.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_description_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">
        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">
            <requestFocus />
        </EditText>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthEditText"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_description_button_divider"/>

    <Button
        android:text="@string/sign_up_button_label"
        android:id="@+id/signUpButton"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        style="@style/AuthButton"
        android:layout_marginEnd="0dp"/>
    <Button
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/buttonDivider"
        android:layout_below="@id/editTextLayout"
        style="@style/AuthButton"
        android:layout_marginStart="0dp"/>
</RelativeLayout>
